src/index.css
:root {
  --color-bg-dark: #f5f5f5;
  --color-bg: #fdfffd;
  --color-grey: #d1d1d1;
  --color-text: #22243b;
  --color-accent: #f16e03;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;

  /* by https://cssgradient.io  */
  background: rgb(99, 125, 133);
  background: linear-gradient(
    162deg,
    rgba(99, 125, 133, 1) 23%,
    rgba(32, 80, 94, 0.6516981792717087) 90%
  );
}

#root {
  width: 100%;
  height: 60%;
  max-width: 500px;
  background-color: var(--color-bg-dark);
  border-radius: 1rem;
  display: flex;
  flex-direction: column;
  /* by https://cssgenerator.org/box-shadow-css-generator.html */
  box-shadow: 10px 16px 44px 1px rgba(0, 0, 0, 0.75);
  -webkit-box-shadow: 10px 16px 44px 1px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: 10px 16px 44px 1px rgba(0, 0, 0, 0.75);
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

ul {
  list-style: none;
  padding-left: 0;
}

